crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@132.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select to_tsvector('simple', 'x y z q') @@ '(x | y <-> z) <-> q' AS \"true\";"
---
SelectStmt@0..75
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..74
    AExpr@7..64
      FuncCall@7..38
        Ident@7..18 "to_tsvector"
        Ascii40@18..19 "("
        AConst@19..27
          Sconst@19..27 "'simple'"
        Ascii44@27..28 ","
        Whitespace@28..29 " "
        AConst@29..38
          Sconst@29..38 "'x y z q'"
      Ascii41@38..39 ")"
      Whitespace@39..40 " "
      Op@40..42 "@@"
      Whitespace@42..43 " "
      AConst@43..64
        Sconst@43..64 "'(x | y <-> z) <-> q'"
    Whitespace@64..65 " "
    As@65..67 "AS"
    Whitespace@67..68 " "
    Ident@68..74 "\"true\""
  Ascii59@74..75 ";"

