crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@138.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select to_tsvector('simple', 'x q') @@ '(x | y <-> !z) <-> q' AS \"true\";"
---
SelectStmt@0..72
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..71
    AExpr@7..61
      FuncCall@7..34
        Ident@7..18 "to_tsvector"
        Ascii40@18..19 "("
        AConst@19..27
          Sconst@19..27 "'simple'"
        Ascii44@27..28 ","
        Whitespace@28..29 " "
        AConst@29..34
          Sconst@29..34 "'x q'"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Op@36..38 "@@"
      Whitespace@38..39 " "
      AConst@39..61
        Sconst@39..61 "'(x | y <-> !z) <-> q'"
    Whitespace@61..62 " "
    As@62..64 "AS"
    Whitespace@64..65 " "
    Ident@65..71 "\"true\""
  Ascii59@71..72 ";"

