crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '''w'':4A,3B,2C,1D,5 a:8';"
---
SelectStmt@0..33
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..32
    AConst@7..32
      Sconst@7..32 "'''w'':4A,3B,2C,1D,5  ..."
  Ascii59@32..33 ";"

